--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-  <string name="app_name">CaculatorBasic</string>
+  <string name="app_name">CalculatorBasic</string>
+  <string name="btn_delete"><![CDATA[<<<]]></string>
 </resources>
